stoat/src/snapshots/tui/stoat__test_harness__dock_open_overlay.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 60x10
---

                    [0m[36m┌──────────────────────────────────────┐[0m
                    [0m[36m│[0m[90mClaude[0m                                [0m[36m│[0m
                    [0m[36m│[0m                                      [0m[36m│[0m
                    [0m[36m│[0m                                      [0m[36m│[0m
                    [0m[36m│[0m                                      [0m[36m│[0m
                    [0m[36m│[0m[90m--------------------------------------[0m[36m│[0m
                    [0m[36m│[0m[7m [0m                                     [0m[36m│[0m
                    [0m[36m└──────────────────────────────────────┘[0m
[0m[90m[40m [scratch]                                              1:1 [0m
