stoat/src/snapshots/tui/stoat__test_harness__dock_overlays_split_panes.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_claude
focused: #2 of 2
mode: normal
size: 80x10
---
┌─────────────────────────────────────┐ ┌──────────────────────────────────────┐
│                                     │ ┌──────────────────────────────────────┐
│                                     │ │Claude                                │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │--------------------------------------│
│                                     │ │                                      │
│                                     │ └──────────────────────────────────────┘
└─────────────────────────────────────┘ └──────────────────────────────────────┘
