stoat/src/snapshots/tui/stoat__test_harness__help_all_scope_after_shift_tab.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: b
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[7m [0m                                                                             [0m[36m│[0m
[0m[36m│[0m [0m[36m┌ help: active (normal) ───────────────────────────────────────────────────┐[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[33m> [0m[97mb[0m[30m[107m [0m                                                              [0m[90m[insert][0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[30m[46m   C  AddSelectionBelow  add cu[0m[90m│[0m [0m[1m[33mAddSelectionBelow[0m                        [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36m  b[0m[97m  MovePrevWordStart  [0m[90mselect│[0m [0m[36mbound: C[0m                                 [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36m  L[0m[97m  OpenCommits  [0m[90mbrowse commi│[0m [0m[97madd cursor below[0m                         [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36m  :[0m[97m  OpenCommandPalette  [0m[90mopen │[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36m  ?[0m[97m  OpenHelp  [0m[90mopen the help m│[0m [0m[97mAdd a new cursor on the line below the[0m   [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36mSpc[0m[97m  SetMode  [0m[90mtransition to a │[0m [0m[97mnewest cursor.[0m                           [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36m  i[0m[97m  SetMode  [0m[90mtransition to a │[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m [0m[1m[33mExample:[0m                                 [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m [0m[90m  AddSelectionBelow()[0m                    [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[90mEnter dispatch | Esc normal | Shift-Tab scope | C-u/d scroll | Bksp[0m       [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m└──────────────────────────────────────────────────────────────────────────┘[0m [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────┘[0m
