stoat/src/snapshots/tui/stoat__test_harness__help_filter_typing.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: e
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[7m [0m                                                                             [0m[36m│[0m
[0m[36m│[0m [0m[36m┌ help: active (normal) ───────────────────────────────────────────────────┐[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[33m> [0m[97mmove[0m[30m[107m [0m                                                           [0m[90m[insert][0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[30m[46m j  MoveDown  move cursor down [0m[90m│[0m [0m[1m[33mMoveDown[0m                                 [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36mh[0m[97m  MoveLeft  [0m[90mmove cursor left[0m[97m [0m[90m│[0m [0m[36mbound: j[0m                                 [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36me[0m[97m  MoveNextWordEnd  [0m[90mselect to │[0m [0m[97mmove cursor down[0m                         [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36mw[0m[97m  MoveNextWordStart  [0m[90mselect t│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36mb[0m[97m  MovePrevWordStart  [0m[90mselect t│[0m [0m[97mMove every cursor one display line down,[0m [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36ml[0m[97m  MoveRight  [0m[90mmove cursor righ│[0m [0m[97mpreserving the goal column.[0m              [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[97m [0m[36mk[0m[97m  MoveUp  [0m[90mmove cursor up[0m[97m     [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m [0m[1m[33mExample:[0m                                 [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m [0m[90m  MoveDown()[0m                             [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m                               [0m[90m│[0m                                          [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m│[0m[90mEnter dispatch | Esc normal | Shift-Tab scope | C-u/d scroll | Bksp[0m       [0m[36m│[0m [0m[36m│[0m
[0m[36m│[0m [0m[36m└──────────────────────────────────────────────────────────────────────────┘[0m [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────┘[0m
