stoat/src/snapshots/tui/stoat__test_harness__open_file_replaces_focused_pane.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 80x24
---
┌──────────────────────────────────────────────────────────────────────────────┐
│file B                                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
